[tool.poetry]
name = 'linea_voyage_0'
version = '0.1.0'
description = 'The bot farming Linea Voyage XP for the future drop.'
authors = ['Sergei <nikis.trainer@gmail.com>', 'Alexey <abelenkov2006@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/linea-voyage-0'
homepage = 'https://github.com/blnkoff/linea-voyage-0'
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Customer Service',
    'Topic :: Software Development :: Libraries :: Python Module',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'linea_voyage_0' }]

[tool.poetry.dependencies]
python = '>=3.11,<3.13'
croco-tools = {git = "https://github.com/blnkoff/croco-tools.git"}
loguru = "^0.7.2"
croco-selenium = "^0.1.0"
seldegen = {git = "https://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@github.com/blnkoff/seldegen.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyinstaller = "^6.3.0"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
